--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ pandas>=2.2.3               # Verified to work on 3.13; or use pandas>=2.3
 altair>=6.0.0               # 6.0+ released Nov 2025; earlier 5.x had 3.13 issues
 openpyxl
 urllib.parse
+html
